--- a/.classpath
+++ b/.classpath
@@ -42,5 +42,7 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-web-4.0.4.RELEASE.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-webmvc-4.0.4.RELEASE.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/standard.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-fileupload-1.3.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-io-2.2.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
