简单加备注

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -2,27 +2,33 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
   <display-name>Library</display-name>
   
-  <context-param>
-		<param-name>contextConfigLocation</param-name>
-	 	<param-value>classpath*:applicationContext*.xml</param-value>
-	 </context-param>   
-	 
-	 <listener>
-	 	 <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	 </listener>    
+  	<!-- 配置 Spring IoC 配置文件路径 -->
+	<context-param>
+  		<param-name>contextConfigLocation</param-name>
+  		<param-value>classpath*:applicationContext*.xml</param-value>
+  	</context-param>   
+	
+	<!-- 配置 ContextLoaderListener 用以初始化 Spring IoC 容器 -->
+	<listener>
+	
+	<!-- ContextLoaderListener 可以在web工程初始化之前，完成对 Spring IoC 容器的初始化
+	也可以在 Web 工程关闭之时完成 Spring IoC 容器的资源进行释放 -->
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>    
   
-  <!-- 配置 DispatcherServlet -->
+  	<!-- 配置 DispatcherServlet -->
 	<servlet>
 		<servlet-name>dispatcherServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-		<!-- 配置 DispatcherServlet 的一个初始化参数: 配置 SpringMVC 配置文件的位置和名称 -->
 	
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
 			<param-value>classpath*:springmvc.xml</param-value>
 		</init-param>
+		<load-on-startup>2</load-on-startup>
 	</servlet>
 
+	<!-- Servlet 拦截配置 -->
 	<servlet-mapping>
 		<servlet-name>dispatcherServlet</servlet-name>
 		<url-pattern>/</url-pattern>
