--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -33,4 +33,15 @@
 		<servlet-name>dispatcherServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	
+	
+	<filter>
+    <filter-name>cros</filter-name>
+    <filter-class>com.blog.util.CORSFilter</filter-class>
+	</filter>
+	<filter-mapping>
+    	<filter-name>cros</filter-name>
+    	<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
 </web-app>
